--- a/readme
+++ b/readme
@@ -1,5 +1,39 @@
-Groupe de Projet : 
+# 🚀 Projet Symfony - Anime Letterboxd Style Aplication
 
-Ayoub Essalhi
-Michael Ditlecadet 
-Moundir Brahmi
+## 📖 Description
+Cette application permet actuellement d'afficher une liste d'animes et de liker ces animes préférés. 
+
+## 👥 Collaborateur
+ayoug27 -> ESSALHI Ayoub
+MichaelDitlecadet  -> DITLECADET Michaël
+moundir213 -> BRAHMI Moundir 
+
+## ⚙️ Installation
+
+**1. Clonez le dépôt 🛠️**
+   ```bash
+   git clone https://github.com/moundir213/LetterBoxProject.git
+   ```
+
+**2. Installation des dépendances 📦**
+   ```bash
+   composer install
+   ```
+
+**3. Exécuter les migrations de base de données 🗄️**
+   ```bash
+   php bin/console doctrine:migrations:migrate
+   ```
+
+**5. Charger les données de test 🗂️**
+   ```bash
+   php bin/console doctrine:fixtures:load
+   ```
+⚠️ Attention : Cette commande réinitialisera les données existantes en base !
+
+**6. Démarrez le serveur 🚀** 
+   ```bash
+   symfony serve
+   ```
+
+   L'application sera disponible à l'adresse [http://localhost:8000](http://localhost:8000).
